migrated to multi-module project; added explicit support for 1.19.1-1.19.3

--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ChatComponentPatcher
-version: 0.1
+version: ${project.version}
 author: BlvckBytes
 main: me.blvckbytes.chat_component_patcher.ChatComponentPatcherPlugin
 api-version: 1.13
