--- a/compatibility/gte_v1_20_4/pom.xml
+++ b/compatibility/gte_v1_20_4/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>gte_v1_21</artifactId>
+    <artifactId>gte_v1_20_4</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
