--- a/core/pom.xml
+++ b/core/pom.xml
@@ -42,7 +42,7 @@
         </dependency>
         <dependency>
             <groupId>me.blvckbytes</groupId>
-            <artifactId>gte_v1_21</artifactId>
+            <artifactId>gte_v1_20_4</artifactId>
             <version>${revision}</version>
         </dependency>
     </dependencies>
@@ -69,7 +69,7 @@
                             <include>me.blvckbytes:common</include>
                             <include>me.blvckbytes:gte_v1_19_1</include>
                             <include>me.blvckbytes:gte_v1_19_3</include>
-                            <include>me.blvckbytes:gte_v1_21</include>
+                            <include>me.blvckbytes:gte_v1_20_4</include>
                         </includes>
                     </artifactSet>
 
