--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>core</module>
         <module>compatibility/gte_v1_19_3</module>
         <module>compatibility/gte_v1_19_1</module>
-        <module>compatibility/gte_v1_21</module>
+        <module>compatibility/gte_v1_20_4</module>
     </modules>
 
     <properties>
