--- a/compatibility/gte_v1_20_4/pom.xml
+++ b/compatibility/gte_v1_20_4/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>me.blvckbytes</groupId>
-        <artifactId>chatcomponentpatcher-root</artifactId>
+        <artifactId>linkenabler-root</artifactId>
         <version>${revision}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
