--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.blvckbytes</groupId>
-    <artifactId>chatcomponentpatcher-root</artifactId>
+    <artifactId>linkenabler-root</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
 
